--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,60 @@ h1 {
   border: none;
   cursor: pointer;
 }
+
+/* ------- MAIN -------------- */
+
+main{
+  margin-top: 40px;
+
+}
+
+.description {
+display: flex;
+flex-wrap: wrap;
+background-color: black;
+gap: 15px;
+
+
+}
+
+article {
+  background-color: bisque;
+  border: 1px solid red;
+  padding-bottom: 10px;
+ 
+}
+
+
+.author {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+.author > img {
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;   
+}
+
+.main-pic {
+  height: 355px;
+  width: 230px;
+  object-fit: cover;
+}
+
+.details {
+  margin-top: 10px;
+  padding-left: 10px;
+  font-size: 16px;
+ 
+}
+.more-details {
+  font-size: 13px;
+  gap: 5px;
+  
+}
